Greatly improved permissions management